--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,14 @@
 		    <artifactId>jol-core</artifactId>
 		    <version>0.9</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.caffinitas.ohc</groupId>
+			<artifactId>ohc-core</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
