--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,19 @@
 		</dependency>
 
 
+		<!-- kryo -->
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo</artifactId>
+			<version>5.0.0-RC5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.68</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -86,7 +99,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+		</plugin>
 		</plugins>
 	</build>
 
